# PIAIC_STUDIES

Batch-47/: Git-Commands.txt
Batch-47/Container/Project-Online/: compose.yaml
Batch-47/Container/Project-Online/product-service/: .env
Batch-47/Generative_AI/FastAPI_Poetry/: Readme.txt.txt
Batch-47/Generative_AI/FastAPI_Poetry/online-class/: .eny  pyproject.toml
Batch-47/Generative_AI/FastAPI_Poetry/todo-server/: pyproject.toml
Batch-47/NextJS/session-8-oct/: package-lock.json  package.json
Batch-47/Python/Anaconda-Practice/: Anaconda_Commands.txt  class-01.ipynb
Batch-47/Python/Class-Practice/: Anaconda_Commands.txt  class-01.py  requirements.txt
Batch-47/Python/Poetry-Practice/: Poetry-txt.txt
Batch-47/Python/Poetry-Practice/Class01/: pyproject.toml
Batch-47/Python/Poetry-Practice/project_youtube/: pyproject.toml
Batch-47/TypeScript/: Assignment  Type Script Projects Commands.txt
Batch-47/TypeScript/Assignment-Q45/: Q-02.js  Q-02.ts  Q-03.js  Q-03.ts  Q-04.js  Q-04.ts  Q-05.js  Q-05.ts  Q-06.js  Q-06.ts  Q-07.js  Q-07.ts  Q-08.js  Q-08.ts  Q-09.js  Q-09.ts  Q-10.js  Q-10.ts  Q-11.js  Q-11.ts  Q-12.js  Q-13.js  Q-14.js  Q-14.ts  Q-15.js  Q-15.ts  Q-16.js  Q-16.ts  Q-17.js  Q-17.ts  Q-18.ts  Q-19.ts  Q-21.ts  Q-22.ts  Q-23.ts  Q-24.ts  Q-26.ts  Q-28.ts  Q-29.ts  Q-34.ts  (+8 more)
Batch-47/TypeScript/Assignment-Q45/src/: Q-12.ts  Q-13.ts  Q-16.ts  Q-17.ts  Q-20.ts  Q-25.ts  Q-27.ts  Q-30.ts  Q-31.ts  Q-32.ts  Q-33.ts  Q-37.ts  Q-39.ts  Q-40.ts  Q-42.ts
Batch-47/TypeScript/Class-Practice/: TS01.js  TS01.ts  package-lock.json  tsconfig.json
(+23 files in other folders)
