[tool.poetry]
name = "class01"
version = "0.1.0"
description = ""
authors = ["Shahbaz Akbar <shahbaz.idea@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
unicorn = {extras = ["standard"], version = "^2.0.1.post1"}
uvicorn = {extras = ["standard"], version = "^0.28.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
